# elevation-kit-rs

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
elevation-adapters/: Cargo.toml
elevation-adapters/src/: artifact_storage_fs.rs  artifact_storage_s3.rs  lib.rs  metadata_storage_fs.rs  raster_reader_gdal.rs
elevation-adapters/src/artifact_resolvers/: artifact_resolver_fs.rs  artifact_resolver_gdal_s3.rs  mod.rs
elevation-api/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml
elevation-api/src/application/: elevation_service.rs
elevation-api/src/domain/: coordinate.rs  mod.rs
elevation-api/src/routes/: elevations.rs
elevation-api/tests/utils/: app.rs
elevation-cli/: Cargo.toml
elevation-core/: Cargo.toml
elevation-core/benches/: service_datasets_merge.rs
elevation-core/src/: elevation_service.rs  lib.rs  raster_reader.rs
elevation-core/src/ingest/: ingest_service.rs
elevation-core/tests/: ingest.rs
elevation-domain/: Cargo.toml
elevation-domain/src/: elevation.rs  lib.rs  metadata.rs  raster.rs  spatial.rs  storage.rs
elevation-ingest/: Cargo.toml
elevation-ingest/src/: artifact_storage_fs.rs  gdal_process.rs  ingest.rs  lib.rs  main.rs  metadata_storage_fs.rs
elevation-ingest/tests/: ingest.rs
elevation-main/src/: main.rs
elevation-metadata-fs/: Cargo.toml
elevation-metadata-fs/src/: lib.rs
elevation-prepare-cli/: Cargo.toml  README.md
elevation-prepare-cli/src/: main.rs  telemetry.rs
elevation-profile-grpc/: Cargo.toml
elevation-profile-grpc/src/: main.rs  telemetry.rs
elevation-profile-grpc/src/application/: elevation_provider.rs  profile_service.rs
elevation-profile-grpc/src/grpc/: server.rs
elevation-storage-fs/: Cargo.toml
elevation-storage-fs/src/: lib.rs
elevation-tiles-http/: Cargo.toml  README.md
elevation-tiles-http/src/: error.rs  lib.rs
elevation-tiles-http/src/application/: elevation_accumulator.rs  elevation_provider.rs  mod.rs  tile_aggregator.rs  tile_service.rs
elevation-tiles-http/src/application/elevation_calculation/: mean.rs  mod.rs
elevation-tiles-http/src/domain/: elevation_tile.rs  mod.rs  tile.rs
elevation-tiles-http/src/routes/: tiles.rs
elevation-types/: Cargo.toml
elevation-types/src/: lib.rs
georaster-adapters/: Cargo.toml
georaster-adapters/src/artifact_resolvers/: fs.rs  s3.rs
georaster-adapters/src/artifact_storages/: fs.rs  s3.rs
georaster-adapters/src/metadata_storages/: fs.rs
georaster-adapters/src/raster_readers/: gdal.rs
georaster-core/: Cargo.toml
georaster-core/benches/: service_datasets_merge.rs
georaster-core/src/: georaster_sampling.rs  georaster_service.rs  lib.rs
georaster-core/src/ingest/: ingest_service.rs  mod.rs
georaster-core/tests/: ingest.rs
georaster-domain/: Cargo.toml
georaster-domain/src/: lib.rs  metadata.rs  raster.rs
