[package]
name = "elevation-core"
version = "0.1.0"
edition = "2024"

[dependencies]
elevation-domain = { path = "../elevation-domain" }
tracing = "0.1.44"
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros"] }
criterion = { version = "0.8.2", features = ["async_tokio"] }

[[bench]]
name = "service_datasets_merge"
harness = false
