[package]
name = "elevation-prepare-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
georaster-adapters = { path = "../georaster-adapters" }
georaster-domain = { path = "../georaster-domain" }
georaster-core = { path = "../georaster-core" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.6.0", features = ["derive"] }
aws-sdk-s3 = "1.129.0"
aws-config = "1.8.15"
