[package]
name = "elevation-profile-grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
georaster-adapters = { path = "../georaster-adapters" }
georaster-domain = { path = "../georaster-domain" }
georaster-core = { path = "../georaster-core" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }
geo = { workspace = true }
tonic = { version = "0.14.5", features = ["transport"] }
prost = "0.14.3"
tonic-prost = "0.14.5"
tokio-stream = "0.1.18"
tonic-health = "0.14.5"
dotenvy = "0.15.7"

[build-dependencies]
tonic-prost-build = "0.14.5"
